--- a/about.html
+++ b/about.html
@@ -21,13 +21,13 @@
 
     <header class="header">
 
-        <a href="home.html" class="logo"><img src="images/RNXG_LOGO.png" alt=""> RNXG </a>
+        <a href="index.html" class="logo"><img src="images/RNXG_LOGO.png" alt=""> RNXG </a>
 
         <div id="menu-btn" class="fas fa-bars"></div>
 
         <nav class="navbar">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="#">Domain</a>
 
