--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -21,7 +21,7 @@
 
     <header class="header">
 
-        <a href="index.html" class="logo"><img src="images/RNXG_LOGO.png" alt=""> RNXG </a>
+        <a href="index.html" class="logo"><img src="RNXG_LOGO.png" alt=""> RNXG </a>
 
         <div id="menu-btn" class="fas fa-bars"></div>
 
@@ -67,7 +67,7 @@
     <section class="about">
 
         <div class="image">
-            <img src="images/about-img.png" alt="">
+            <img src="about-img.png" alt="">
         </div>
 
         <div class="content">
@@ -122,8 +122,6 @@
     <!-- footer section ends -->
     <!-- footer section ends -->
 
-    <!-- custom js file link  -->
-    <script src="js/script.js"></script>
 
 </body>
 
