--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -19,7 +19,7 @@
 
 <header class="header">
 
-    <a href="index.html" class="logo"><img src="images/RNXG_LOGO.png" alt=""> RNXG  </a>
+    <a href="index.html" class="logo"><img src="RNXG_LOGO.png" alt=""> RNXG  </a>
 
     <div id="menu-btn" class="fas fa-bars"></div>
 
@@ -131,8 +131,6 @@
 <!-- footer section ends -->
 <!-- footer section ends -->
 
-<!-- custom js file link  -->
-<script src="js/script.js"></script>
 
 </body>
 </html>
