--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -19,7 +19,7 @@
 
 <header class="header">
 
-    <a href="index.html" class="logo"><img src="images/RNXG_LOGO.png" alt=""> RNXG  </a>
+    <a href="index.html" class="logo"><img src="RNXG_LOGO.png" alt=""> RNXG  </a>
 
     <div id="menu-btn" class="fas fa-bars"></div>
 
@@ -61,7 +61,7 @@
 <section class="home">
 
     <div class="image">
-        <img src="images/home-img.png" alt="">
+        <img src="home-img.png" alt="">
     </div>
 
     <div class="content">
@@ -81,17 +81,17 @@
 <section class="category">
   
     <a href="#" class="box">
-        <img src="images/category-1.png" alt="">
+        <img src="category-1.png" alt="">
         <h3>Software</h3>
     </a>
 
     <a href="#" class="box">
-        <img src="images/category-2.png" alt="">
+        <img src="category-2.png" alt="">
         <h3>Electronics</h3>
     </a>
 
     <a href="#" class="box">
-        <img src="images/category-3.png" alt="">
+        <img src="category-3.png" alt="">
         <h3>Mechanical</h3>
     </a>
 
@@ -152,8 +152,7 @@
 
 <!-- footer section ends -->
 
-<!-- custom js file link  -->
-<script src="js/script.js"></script>
+
 
 </body>
 </html>
